# SSMS

./: .gitignore  CMakeLists.txt  Goods.cpp  Goods.h  README.md  Transactions.cpp  Transactions.h  User.cpp  User.h  config.h  data.db  main.cpp  ssms_ui.cpp  ssms_ui.h  ssms_ui.ui  system.cpp  system.h
